    + [RA] Allow tildes in the optional version number in the Source
      field.  Thanks, Rene Engelhard.  (Closes: #500063)

  * checks/scripts:
    + [ADB] Detect brace expansions with either a leading or trailing
      blank component (e.g. "{foo,}"). Thanks to Jonny Lamb for pointing
      this out.
  
  * frontend/lintian:
    + [FL] Fix config file parsing which I completly broke in ~rc1.

  * man/lintian.1:
    + [FL] Remove a stray backslash.
  
  * reporting/harness:
    + [FL] Include STDERR output in lintian.log.

 -- Russ Allbery <rra@debian.org>  Wed, 24 Sep 2008 11:13:27 -0700

lintian (2.0.0~rc2) experimental; urgency=low

  * Summary of tag changes:
    + Added:
      - package-superseded-by-perl
  
  * checks/copyright-file:
    + [FL] Also detect v1.1 of CeCILL license, not only v2.0.
      (Closes: #498994)
  * checks/debhelper:
    + [FL] Use new Lintian::Collect::Source->binaries method.
  * checks/fields{,.desc}:
    + [FL] Warn about Perl module packages superseded by Perl
      core.  Patch by Niko Tyni.  (Closes: #498897)
  * checks/rules:
    + [FL] Do not issue desktop-file-but-no-dh_desktop-call if the
      package uses dh.  (Closes: #497247)
  * checks/scripts:
    + [FL] Accept the ocaml virtual packages as providing ocamlrun.
      Based on a patch by Stephane Glondu.  (Closes: #495431)
  * checks/standards-version:
    + [FL] Use new Lintian::Collect::Source->binaries method to
      fix udeb detection.  Thanks to Raphael Geissert.
      (Closes: #498096)
  
  * frontend/lintian:
    + [FL] Add support for ranges to --display-level.
  
  * lib/Lintian/Collect/Source.pm:
    + [FL] New binaries method that returns a hash with binary package
      names and types.

 -- Frank Lichtenheld <djpig@debian.org>  Sun, 21 Sep 2008 15:56:51 +0200

lintian (2.0.0~rc1) experimental; urgency=low

  * [FL] Merge the results of the GSoC project by Jordà Polo,
    which fully implements a tag classification system in two